crates/runtime/tests/search/snapshots/integration_models__search__cayenne-s3_vectors-dataset-hybrid_single_column_megascience_with_where_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "Relative or \"stress\" polycythaemia, which is secondary to a depletion in the plasma volume."
        ]
      },
      "primary_key": {
        "id": 890
      },
      "_score": 0.01
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "Pedunculagin and alchemillin have astringent and wound-healing properties, possibly due to their high tannin content."
        ]
      },
      "primary_key": {
        "id": 1015
      },
      "_score": 0.01
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "Dermatomycosis is caused by fungal infections, specifically various forms of *tinea*, such as athlete's foot (*tinea pedis*)."
        ]
      },
      "primary_key": {
        "id": 821
      },
      "_score": 0.01
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "More than 10 years of follow-up is required, as late recurrences (beyond 12 years) have been reported in 5%–10% of patients."
        ]
      },
      "primary_key": {
        "id": 449
      },
      "_score": 0.01
    }
  ]
}
