crates/runtime/tests/search/snapshots/integration_models__search__cayenne-s3_vectors-dataset-multi_column_megascience_basic_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": 0.03,
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ],
        "question": [
          "Which base number, when raised to the fifth power, equals thirty-two?"
        ]
      },
      "primary_key": {
        "id": 1277
      }
    },
    {
      "_score": 0.03,
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "\\[\n2 - 2(-3)^2 = 2 - 2(9) = 2 - 18 = \\boxed{-16}\n\\]"
        ],
        "question": [
          "Evaluate the expression \\( 2 - 2x^2 \\), where \\( x = -3 \\)."
        ]
      },
      "primary_key": {
        "id": 189
      }
    },
    {
      "_score": 0.03,
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The fifth root of 32 is \\(\\boxed{2}\\), because \\(2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ],
        "question": [
          "What is the fifth root of 32?"
        ]
      },
      "primary_key": {
        "id": 948
      }
    },
    {
      "_score": 0.01,
      "dataset": "spice.public.qs",
      "matches": {
        "question": [
          "Calculate the number of permutations of 14 items taken 4 at a time."
        ]
      },
      "primary_key": {
        "id": 41
      }
    }
  ]
}
