crates/runtime/tests/search/snapshots/integration_models__search__cayenne-s3_vectors-dataset-multi_column_megascience_vector_search_sql_filtered_index_only_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, trunc(_score, 3) as _score FROM vector_search(qs, 'secondary', answer, 4) WHERE subject != 'math' ORDER BY _score DESC, id"
---
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                             |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: _score DESC NULLS FIRST, vector_search(qs, Utf8("secondary"), answer, Int64(4)).id ASC NULLS LAST                                                                                                                                                                                                                                                                          |
|               |   Projection: vector_search(qs, Utf8("secondary"), answer, Int64(4)).id, trunc(vector_search(qs, Utf8("secondary"), answer, Int64(4))._score, Int64(3)) AS _score                                                                                                                                                                                                                |
|               |     TableScan: vector_search(qs, Utf8("secondary"), answer, Int64(4)) projection=[_score, id], full_filters=[vector_search(qs, Utf8("secondary"), answer, Int64(4)).subject != Utf8("math")]                                                                                                                                                                                     |
| physical_plan | SortPreservingMergeExec: [_score@1 DESC, id@0 ASC NULLS LAST]                                                                                                                                                                                                                                                                                                                    |
|               |   SortExec: expr=[_score@1 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                                                                                                                                                                                              |
|               |     ProjectionExec: expr=[id@0 as id, trunc(_score@1, 3) as _score]                                                                                                                                                                                                                                                                                                              |
|               |       FilterExec: subject@2 != math, projection=[id@0, _score@1]                                                                                                                                                                                                                                                                                                                 |
|               |         HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@0)], projection=[id@0, _score@1, subject@3]                                                                                                                                                                                                                             |
|               |           CoalescePartitionsExec                                                                                                                                                                                                                                                                                                                                                 |
|               |             ProjectionExec: expr=[CAST(key@0 AS Int64) as id, 1 - distance@1 as _score]                                                                                                                                                                                                                                                                                          |
|               |               RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                                                                                               |
|               |                 CoalescePartitionsExec: fetch=4                                                                                                                                                                                                                                                                                                                                  |
|               |                   CooperativeExec                                                                                                                                                                                                                                                                                                                                                |
|               |                     BytesProcessedExec                                                                                                                                                                                                                                                                                                                                           |
|               |                       RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                                                                                       |
|               |                         CooperativeExec                                                                                                                                                                                                                                                                                                                                          |
|               |                           S3VectorsQueryExec (INDEX_NAME_1): limit=4                                                                                                                                                                                                                                                                                                             |
|               |           SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                     |
|               |             CayenneAccelerationExec                                                                                                                                                                                                                                                                                                                                              |
|               |               BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                 |
|               |                 RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                                                                                                                                                             |
|               |                   DataSourceExec: file_groups={1 group: [[<NORMALIZED_PATH>/.vortex]]}, projection=[id, subject], file_type=vortex, predicate: subject@7 != math |
|               |                                                                                                                                                                                                                                                                                                                                                                                  |
+---------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
